# Hungry_snake

./: .gitignore  CMakeLists.txt  README.md
include/: constants.h  draw.h  food.h  game.h  menu.h  music.h  snake.h
src/: Snake.cpp  draw.cpp  food.cpp  game.cpp  main.cpp  menu.cpp  music.cpp
